other/res/restrict-jobs/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-jobs
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-jobs.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: jobs-bad.yaml
    - apply:
        file: cronjobs-good.yaml
